--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -3,8 +3,8 @@ name: Generate Leaderboard
 on:
   push:
     paths:
-      - '*.json'  # Trigger on new JSON files
-      - 'summary_all_json.csv'  # Or when summary is updated
+      - 'fundraising-emails/*.json'  # Trigger on new JSON files
+      - 'fundraising-emails/summary_all_json.csv'  # Or when summary is updated
 
 jobs:
   generate-leaderboard:
