--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -6,6 +6,11 @@ on:
 jobs:
   generate-leaderboard:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
     
     steps:
     - name: Checkout repository
