--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.12"
 dependencies = [
     "matplotlib>=3.10.5",
     "ollama>=0.5.1",
+    "openai>=1.98.0",
     "pandas>=2.3.1",
+    "pydantic>=2.11.7",
     "scikit-learn>=1.7.1",
     "seaborn>=0.13.2",
     "sqlite-utils>=3.38",
